[tool.poetry]
name = "covid-news"
version = "0.1.0"
description = ""
authors = ["Brian"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
SQLAlchemy = "^1.4.19"
pandas = "^1.2.5"
tqdm = "^4.61.1"
schedule = "^1.1.0"
psycopg2-binary = "^2.9.1"
lxml = "^4.6.3"
black = "^21.6b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
